# cc2-gcode-capture-proxy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: api.py  config.py  gcode_parser.py  http_proxy.py  main.py  storage.py  tcp_proxy.py
tests/: conftest.py  test_api.py  test_config.py  test_gcode_parser.py  test_http_proxy.py  test_storage.py  test_tcp_proxy.py
