[project]
name = "cc2-gcode-capture-proxy"
version = "1.0.0"
description = "Local network reverse proxy that captures G-code files uploaded to an Elegoo Centauri Carbon 2 printer"
readme = "README.md"
license = {text = "CC0-1.0"}
repository = "https://github.com/lantern-eight/cc2-gcode-capture-proxy"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.9,<4",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "ruff>=0.8", "pre-commit>=4"]

[project.scripts]
cc2-proxy = "src.main:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = [
  "E",      # pycodestyle
  "F",      # Pyflakes
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "SIM",    # flake8-simplify
  "I",      # isort
  "PT",     # pytest style
  "ASYNC",  # async best practices
  "Q",      # flake8-quotes (single quotes per AGENTS.md)
]
ignore = [
  "E501",   # line length -- formatter handles this
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.format]
# Preserve quote style so docstrings stay single-quoted (PEP 8 prefers """, but
# we use ''' per AGENTS.md; "single" would still convert docstrings to """).
quote-style = "preserve"
